--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 	<!-- JavaScripts
 	============================================= -->
-	<script src="index.js"></script>
+	<script src="./js/index.js"></script>
 	
 </body>
 </html>
