added a hero section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<title>Fresh fruits and Vegetables</title>
 
 </head>
-<header>
-	<nav class="navbar">
+<header style="background-color: #FFF7EC;">
+	<nav class="navbar ">
 		<ul class=" mt-2 mb-0 d-flex list-unstyled">
 			<li class="navigation-item"><a  href="index.html">Home</a></li>
 			<li class="navigation-item"><a  href="#products">Products</a></li>
@@ -44,8 +44,18 @@
 	<hr style="width:90%; margin-left:5%">
 </header>
 
-<body class="stretched" >
-		<!-- Cart Section-->
+<body class="stretched" style="background-color: #FFF7EC;">
+	<div class="section my-0 pb-0 pb-lg-5">
+		<div class="container mw-lg">
+			<div class="row g-5">
+				<div class="col-12 text-center mb-lg-5">
+					<p class="color text-uppercase ls-4 small mb-4">Know More About Us</p>
+					<h2 class="display-3 mb-5">With us, you can have Freshness at Your Doorstep, Taste Our Fresh Fruits and Vegetables</h2>
+					<a href="#" class="button button-border border-color  color h-bg-color h-text-light mb-5">Learn More</a>
+					<p class="color text-uppercase ls-3 small text-center mt-5">Explore our New Stock</p>
+				</div>
+			</div>
+				<!-- Cart Section-->
               
 		<div class="bg-color bg-opacity-9 ">
 			
@@ -72,12 +82,15 @@
 		
 			<!-- Products Section -->
 			<section class="products-section" id="products" style="margin-top:7%;margin-bottom: 7%;">
-				<p class="color text-uppercase ls-3 small mb-3 text-center ">New Stock</p>
-					<h1 class="fresh display-5 mb-6 text-center col-sm-12 ">Our Fresh Fruits and Vegetables</h1>
+				
 				<div class="shopping-products">
 	
 				</div>
-			</section>
+			</section>	
+		</div>
+	</div>
+
+
 		
 		<!-- Footer
 		============================================= -->
