--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="demos/skincare/skincare.css">
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" href="css/custom.css">
+	<link rel="stylesheet" href="custom.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Document Title
